--- a/INR_USD_Prediction.ipynb
+++ b/INR_USD_Prediction.ipynb
@@ -34,7 +34,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# INR vs USD currency predictor using  Time-Series \n",
+        "# INR vs USD currency predictor using  Time-Seriess \n",
         "We are going to predict the possible value of INR compared to USD by performing Time-Series predictoin in Tensorflow\n"
       ]
     },
